Docs: added watcher file to automatcally generate API docs on specified router file changes
