# api/v1/docs/api-docs.yaml
@@ -217,8 +217,13 @@ paths:
           description: "This is returns all categories assigned to the database."
           schema:
             type: "integer"
+        - name: "sort_order"
+          in: "query"
+          description: "Change the order in which data is returned either ascending or descending"
+          schema:
+            type: "string"
       responses:
         200:
-          description: "Successfully fetched all categories from database"
+          description: "Successfully fetched all categories from database for two"
 components: {}
 tags: []
